# documentor-agent

./: .gitignore  README.md  agent_nodes.py  cli.py  educator_agent.py  file_extractor.py  llm_utils.py  main.py  models.py  pyproject.toml  state.py
docs/Agent Documentor/: 01_educator_agent_workflow.md  02_agent_nodes_logic.md  03_file_extractor.md  04_pydantic_models.md  index.md
